<resources>
    <string name="app_name">CrowdFunding</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="caption_text">Business funding made easy </string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="hint_email">Email</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="forgot_password_msg">Put your registered Email Id to receive password reset instructions.</string>
    <string name="reset_message">We have sent you instructions to reset your password!</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="phone">Phone</string>
    <string name="occupation">Occupation</string>
    <string name="nationality">Nationality</string>
    <string name="loaction">Location</string>
    <string name="address">Address</string>
    <string name="names">Full Name</string>
    <string name="biography">Biography</string>
    <string name="email_address">Email Address</string>
    <string name="payment_description">Payment Description</string>
    <string name="crowd_funding_projects">Crowd Funding Projects</string>
    <string name="comments">Comments</string>
    <string name="purchase">Purchase</string>
    <string name="naira_symbol">NGN</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account number</string>
    <string name="account_name">Account Name</string>
    <string name="enter_account_name">Enter Account Name</string>

    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="selectbank">
        <item>Access Bank Plc </item>
        <item>Citibank Nigeria Limited</item>
        <item>Diamond Bank Plc</item>
        <item>Ecobank Nigeria Plc</item>
        <item>Enterprise Bank</item>
        <item>Fidelity Bank Plc</item>
        <item>First Bank Nigeria Limited</item>
        <item>First City Monument Bank Plc</item>
        <item>Guaranty Trust Bank Plc</item>
        <item>Heritage Banking Company Ltd</item>
        <item>Key Stone Bank</item>
        <item>MainStreet Bank</item>
        <item>Skye Bank Plc</item>
        <item>Stanbic IBTC Bank Ltd</item>
        <item>Standard Chartered Bank Nigeria Ltd</item>
        <item>Sterling Bank Plc</item>
        <item>SunTrust Bank Nigeria Limited</item>
        <item>Union Bank of Nigeria Plc</item>
        <item>United Bank for Africa Plc</item>
        <item>Unity Bank Plc</item>
        <item>Wema Bank Plc</item>
        <item>Zenith Bank Plc</item>
    </string-array>

    <string-array name="nav_item_fragment_titles">
        <item>CrowdFunding Projects</item>
        <item>My Project(s)</item>
        <item>New Project</item>
        <item>Transaction History</item>
        <item>Liked Project(s)</item>
        <item>User Profile</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bank_details">Bank Details</string>
    <string name="update_profile">Update Profile</string>
    <string name="email_notification">Make sure that the email account is active</string>


</resources>
