<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.donald.crowdfunding.activities.AddProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ib_person_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/add_image" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <EditText
                android:id="@+id/et_person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/form_border"
                android:ems="14"
                android:hint="@string/names"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Spinner
                android:id="@+id/gender"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_person_name"
                android:layout_marginTop="10dp"
                android:background="@drawable/form_border"
                android:entries="@array/gender"
                android:imeOptions="actionNext"
                android:padding="10dp"
                android:spinnerMode="dialog"
                android:textColorHint="@color/white"
                android:theme="@style/spinnerTheme" />

            <EditText
                android:id="@+id/et_person_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gender"
                android:layout_marginTop="10dp"
                android:background="@drawable/form_border"
                android:hint="@string/address"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/et_person_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_person_address"
                android:layout_marginTop="10dp"
                android:background="@drawable/form_border"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="11"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/et_person_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_person_phone"
                android:layout_marginTop="10dp"
                android:background="@drawable/form_border"
                android:hint="@string/email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/et_person_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_person_email"
                android:layout_marginTop="10dp"
                android:background="@drawable/form_border"
                android:hint="@string/occupation"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/et_person_biography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_person_occupation"
                android:layout_marginTop="10dp"
                android:background="@drawable/form_border"
                android:gravity="top|start"
                android:hint="@string/biography"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="5"
                android:minLines="3"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/et_person_biography"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/view" />

            <LinearLayout
                android:id="@+id/bankDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line1"
                android:layout_marginTop="10dp"
                android:background="@drawable/form_border"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:padding="6dp"
                    android:text="@string/bank_details"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/et_bank_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/selectbank"
                    android:theme="@style/spinnerTheme"
                    app:hintText="Select Bank" />

                <EditText
                    android:id="@+id/et_accout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/form_border"
                    android:hint="@string/account_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/et_account_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/form_border"
                    android:hint="@string/account_number"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

            </LinearLayout>


            <Button
                android:id="@+id/bt_update_profile"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bankDetails"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/submitbox"
                android:text="@string/update_profile"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </RelativeLayout>
    </LinearLayout>


</ScrollView>