<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.donald.crowdfunding.activities.LandingPage">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/crowdfundinglogo"/>
        <Button
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/signin"
            android:textSize="20sp"
            android:background="@drawable/submitbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:fontFamily="monospace"
            />
        <Button
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/signup"
            android:textSize="20sp"
            android:background="@drawable/submitbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:fontFamily="monospace"
            />

        <TextView
            android:fontFamily="casual"
            android:textStyle="italic|bold"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="45dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/caption_text"/>

    </LinearLayout>


</RelativeLayout>