<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.donald.crowdfunding.activities.UpdateProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ib_person_image"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add_image"/>
        <RelativeLayout
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_marginRight="10dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/et_person_name"
                android:hint="@string/names"
                android:inputType="textCapWords"
                android:fontFamily="casual"
                android:ems="14"
                android:imeOptions="actionNext"

                />
            <Spinner
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@id/et_person_name"
                android:background="@drawable/border_text"
                android:id="@+id/gender"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:entries="@array/gender"/>
            <EditText
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_person_address"
                android:hint="@string/address"
                android:inputType="textCapSentences"
                android:fontFamily="casual"
                android:imeOptions="actionNext"
                android:layout_below="@id/gender"
                />

            <EditText
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_person_phone"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="11"
                android:fontFamily="casual"
                android:imeOptions="actionNext"
                android:layout_below="@+id/et_person_address"
                />

            <EditText
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_person_occupation"
                android:hint="@string/occupation"
                android:inputType="textCapSentences"
                android:fontFamily="casual"
                android:imeOptions="actionNext"
                android:layout_below="@+id/et_person_phone"
                />

            <EditText
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_person_biography"
                android:hint="@string/biography"
                android:inputType="textMultiLine"
                android:fontFamily="casual"
                android:imeOptions="actionNext"
                android:layout_below="@+id/et_person_occupation"
                />


            <Button
                android:id="@+id/bt_update_profile"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:backgroundTint="@color/blue"
                android:background="@drawable/border_text"
                android:layout_below="@+id/et_person_biography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Update Profile"/>



        </RelativeLayout>
    </LinearLayout>


</ScrollView>